re PR debug/12934 (ICE with variable sized arrays in loc_descriptor_from_tree, at dwarf2out.c:8780)

PR debug/12934
	* dwarf2out.c (loc_descriptor_from_tree): Handle
	EXPR_WITH_FILE_LOCATION.
testsuite/
	* gcc.dg/debug/debug-7.c: New test.

From-SVN: r78021